test/error/01_undeclared_var.f
      PROGRAM ERRDECL
      INTEGER A
      A = B + 1
      PRINT *, A
      END
